# Cars-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  example.env  package-lock.json  pyproject.toml
car_api/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  pyproject.toml
car_api/UsersAcc/: apps.py  serializers.py  urls.py  views.py
car_api/cars/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
car_api/cars/management/commands/: delete_cars.py  fetch_cars.py  generate_cars.py  testfaker.py
car_api/cars/migrations/: 0001_initial.py  0002_rename_headquarters_brand_country.py  0003_rename_name_model_car_model_name_alter_brand_country.py  0004_alter_brand_country_alter_brand_name_and_more.py
car_api/config/: settings.py  urls.py
car_api/tests/: tests.py
car_api/users_acc/: apps.py  serializers.py  urls.py
